--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=nightly-ecommerce-backend
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/nightly_ecommerce
+spring.datasource.username=root
+spring.datasource.password=Gprec$123
+
+## (Optional) Hibernate DDL auto settings
+spring.jpa.hibernate.ddl-auto=update
+
+# (Optional) Show SQL queries in console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
